Update Shmosts “astrowind-template-in-depth”

--- a/apps/website/src/content/post/astrowind-template-in-depth.mdx
+++ b/apps/website/src/content/post/astrowind-template-in-depth.mdx
@@ -1,7 +1,7 @@
 ---
 excerpt: Ornare cum cursus laoreet sagittis nunc fusce posuere per euismod dis
   vehicula a, semper fames lacus maecenas
-title: AstroWind template in depth
+title: AstroWind template explained
 image: ~/assets/images/tools.jpg
 description: Lorem ipsum dolor sit amet
 tags:
