--- a/apps/website/src/content/post/something.mdx
+++ b/apps/website/src/content/post/something.mdx
@@ -1,5 +1,9 @@
 ---
 title: something
+category: work
+tags:
+  - programming
+  - work
 image: ~/assets/images/vintage.jpg
 date: 2023-02-28T02:11:08.391Z
 ---
